--- a/MeetUp/app/src/main/res/values/styles.xml
+++ b/MeetUp/app/src/main/res/values/styles.xml
@@ -12,6 +12,10 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
+    
+    <style name="SignTheme" parent="AppTheme">
+        <item name="android:windowBackground">@android:color/white</item>
+    </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
